--- a/public/css/cards.css
+++ b/public/css/cards.css
@@ -15,20 +15,19 @@
     font-family: Arial, sans-serif;
     position: relative;
     background-color: #fff;
-    -moz-box-shadow: .2em .2em .5em #333;
-    -webkit-box-shadow: .2em .2em .5em #333;
-    box-shadow: .2em .2em .5em #333;
-
 }
 
 .playingCards a.card {
   text-decoration: none;
+
 }
 /* selected and hover state */
 .playingCards a.card:hover, .playingCards a.card:active, .playingCards a.card:focus,
 .playingCards label.card:hover,
 .playingCards strong .card {
-  bottom: 1em;
+  transform: translateY(-10px);
+  transition-property: all;
+  transition-duration: 0.5s;
 }
 .playingCards label.card {
   cursor: grab;
@@ -80,7 +79,6 @@
 
 /* inner bits
 ********************************************************************/
-
 /* top left main info (rank and suit) */
 
 .playingCards .card .rank,
@@ -90,6 +88,7 @@
     text-align: left;
 }
 .playingCards .card .rank {
+
 }
 .playingCards .card .suit {
     line-height: .7;
@@ -428,6 +427,7 @@
     margin: 0 0 1.5em 0;
     position: relative;
     clear: both;
+
 }
 .playingCards ul.hand {
     margin-bottom: 3.5em;
