--- a/public/css/gameui.css
+++ b/public/css/gameui.css
@@ -157,9 +157,8 @@ body {
 /*/GENERAL LAYOUT*/
 
 
-
-/*CONTAINERS FOR CARDS ON THE TABLE*/
-.opponentsPlayedCards {
+/*CARDS ON THE TABLE*/
+.opponentsPlayedCards .playersPlayedCards{
   position: relative;
   display: block;
   text-align: center;
@@ -171,7 +170,15 @@ body {
   width: 50%;
 }
 
-/*/CONTAINERS FOR CARDS ON THE TABLE*/
+.mystery {
+  border: 1px dashed white;
+  width: 3.3em;
+  height: 4.6em;
+  opacity: 0.3;
+  z-index: 1;
+}
+
+/*/CARDS ON THE TABLE*/
 
 
 /* BUTTONS */
@@ -207,6 +214,10 @@ body {
   text-decoration: none;
 }
 
-.mystery {
-  border: 1px dashed white;
+div#playerHand .playingCards a.card:hover, .playingCards a.card:active, .playingCards a.card:focus,
+.playingCards label.card:hover,
+.playingCards strong .card {
+  -moz-box-shadow: .2em .2em .5em #333;
+  -webkit-box-shadow: .2em .2em .5em #333;
+  box-shadow: .2em .2em .5em #333;
 }
