--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,44 +1,104 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Home Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--     <link rel="stylesheet" type="text/css" href="css/cards.css">
-    <link rel="stylesheet" type="text/css" href="css/gameui.css"> -->
-    <!--[if lt IE 9]>
-        <link rel="stylesheet" type="text/css" href="cards-ie.css" media="screen" />
-    <![endif]-->
-    <!--[if IE 9]>
-        <link rel="stylesheet" type="text/css" href="cards-ie9.css" media="screen" />
-    <![endif]-->
+<% include ./partials/_header %>
 
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <!-- <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    --> <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
 
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/vendor/socket.io.min.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
-    <script type="text/javascript" src="/scripts/side-nav.js"></script>
-    <script type="text/javascript" src="/scripts/modal.js"></script>
-    <script type="text/javascript" src="/scripts/new-game.js"></script>
-<!--     <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script> -->
+<!-- there is already a body tag in the header -->
+<!-- need to end with body and html -->
 
-  </head>
+  <div class="container">
+    <!-- Page Content goes here -->
 
-  <body id="body">
+    <!-- CONTENT FOR IF USER IS NOT LOGGED IN -->
 
-    <% include ./partials/_navbar %>
+      <% if (!user) { %>
+        <main>
+          <center>
+            <div class="section">
 
-    <section id="game-container">
 
-    </section>
+            <h5 class="blue-text">Please, login into your account</h5>
 
-    <% include ./partials/_game_v2 %>
+            <div class="container">
+
+                <form class="col s12" method="post" action="/api/users/login">
+                  <div class='row'>
+                    <div class='col s12'>
+                    </div>
+                  </div>
+
+                  <div class='row'>
+                    <div class='input-field col s12'>
+                      <input class='validate' type='text' name='username' id='username' />
+                      <label for='email'>Enter your username</label>
+                    </div>
+                  </div>
+
+                  <div class='row'>
+                    <div class='input-field col s12'>
+                      <input class='validate' type='password' name='password' id='password' />
+                      <label for='password'>Enter your password</label>
+                    </div>
+                  </div>
+
+                  <br />
+                  <center>
+                    <div class='row'>
+                      <button type='submit' name='btn_login' class='col s12 light-blue btn btn-large waves-effect light'>Sign In</button>
+                    </div>
+                  </center>
+                </form>
+              </div>
+              <a href="#!">Create account</a>
+              </div>
+              </center>
+              </main>
+            </div>
+
+          <% } %>
+          <!-- /CONTENT FOR IF USER IS NOT LOGGED IN -->
+
+
+    <% if (user) { %>
+    <div class="row">
+
+          <!-- SIDE BAR       -->
+          <div class="col s3">
+
+            <div class="collection">
+              <h4 class="collection-header center">Your Games</h4>
+              <!-- TODO: NEED TO ADD GAME FOR EACH ACTIVE GAME -->
+              <!-- THIS IS JUST SAMPLE  -->
+              <a href="#!" class="collection-item">Game 1</a>
+              <a href="#!" class="collection-item active">Game 2</a>
+              <a href="#!" class="collection-item">Game 3</a>
+              <a href="#!" class="collection-item">Game 4</a>
+            </div>
+          </div>
+          <!-- /SIDE BAR -->
+
+
+          <!-- GAME CONTAINER -->
+          <div class="col s9">
+            <div class="collection">
+              <h4 class="collection-header center">Games</h4>
+                <div class="game">
+                  <section id="game-container">
+                  </section>
+                </div>
+            </div>
+          </div>
+
+          <!-- /GAME CONTAINER -->
+
+    </div>
+    <% } %>
+
+
+
+
+    </div>
+      <!-- <script type="text/javascript" src="JS/jquery-3.1.1.min.js"></script>
+      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script> -->
+    <% include ./partials/_game_v1 %>
 
 
     <script id="game-template" type="text/x-handlebars-template">
@@ -66,8 +126,11 @@
       </article>
     </script>
 
-   <!-- Compiled and minified JavaScript -->
+    <script type="text/javascript" src="/vendor/socket.io.min.js"></script>
+    <script type="text/javascript" src="/scripts/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.6/handlebars.min.js"></script>
-  </body>
+
+
+    </body>
 </html>
